assets/css/application.scss
$govuk-assets-path: '~govuk-frontend/govuk/assets/';
$govuk-global-styles: true; // https://frontend.design-system.service.gov.uk/sass-api-reference/#global-styles
@import '~govuk-frontend/govuk/all';

.nojs-hidden {
  display: none;
}

.js-enabled .nojs-hidden {
  display: block;
}

.govuk-prose-scope {

  // @extend inheritance

  // Contextual heading and paragraph combinations are inherited
  // through the use of @extend

  h1 {
    @extend %govuk-heading-l;
  }

  h2 {
    @extend %govuk-heading-l;
  }

  h3 {
    @extend %govuk-heading-m;
  }

  h4 {
    @extend %govuk-heading-s;
  }

  p {
    @extend %govuk-body-m;
  }

  strong,
  b {
    @include govuk-typography-weight-bold;
  }

  ul,
  ol {
    @extend %govuk-list;
  }

  ol {
    @extend %govuk-list--number;
  }

  ul {
    @extend %govuk-list--bullet;
  }

  a {
    @extend %govuk-link;
  }

  hr {
    @extend %govuk-section-break;
    @extend %govuk-section-break--visible;
    @extend %govuk-section-break--xl;
  }
}

.govuk-input {
  @include govuk-media-query($from: mobile) {
    width: 100%;
  }
}

.subtitle {
  color: $govuk-secondary-text-colour;
}

.section-break-heading {
  height: 2px;
  border-width: 0;
  background-color: gray
}

.section-break-heading--lightgray {
  @extend .section-break-heading;
  background-color: lightgray;
  
}

.search-results-amount {
  margin: govuk-spacing(2) govuk-spacing(7);
  color: black;
  float: right;
}

.grid-column-two-one {
  display: grid; 
  grid-template-columns: 2fr 1fr;
  column-gap: 5px;
}

.grid-column-three-one {
  display: grid; 
  grid-template-columns: 3fr 1fr;
  column-gap: 5px;
}

.grid-row-three-auto {
  display: grid; 
  grid-template-rows: 3fr auto;
}

.mpdp-panel {
  background-color: $govuk-brand-colour;
  padding: 35px;
}

#toggleButton {
  margin: 0 1px 8px auto;
  font: inherit;
}

button.mpdp-link-btn {
  background: none!important;
  border: none;
  padding: 0!important;
  color: #069;
  text-decoration: underline;
  cursor: pointer;
}

.mpdp-text-color-white {
  color: govuk-colour('white') !important;
}

.mpdp-text-color-light-grey {
  color: govuk-colour('light-grey');
}

.mpdp-text-color-dark-grey {
  color: govuk-colour('dark-grey');
}

.mpdp-text-color-black {
  color: govuk-colour('black');
}

.mpdp-bg-color-light-grey {
  background-color: govuk-colour('light-grey');
}

.mpdp-border-color-light-grey {
  border-color: govuk-colour('light-grey');
}

.mpdp-margin-top-negative-3 {
  margin-top: govuk-spacing(-3);
}

.mpdp-text-align-right {
  text-align: right;
}

.mpdp-text-underline {
  text-decoration: underline;
}

.mpdp-list-marker-small {
  font-size: 0.85rem
}

.mpdp-text-align-center {
  text-align: center;
}

@media print {
  a[href]:after {
    content: none !important;
  }
}

.mpdp-details-padding-top {
  padding-top: 241px;
}

.form-inline {  
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
}

.form-inline .container {
  width: 100%;
  position: relative;
}

.form-inline input {
  vertical-align: middle;
  z-index: 1;
}

.form-inline button {
  width: auto;
  box-shadow: none;
  height: 40px;
  margin-bottom: govuk-spacing(0) !important;
  overflow-wrap: normal !important;
}

@media (max-width: 640px) {
  .form-inline input {
    margin: 10px 0;
  }
  
  .form-inline {
    flex-direction: column;
    align-items: stretch;
  }

  .download-csv-flex-end {
    margin: 15px;
  }

  .mpdp-details-padding-top {
    padding-top: 0;
  }
  
}

.mpdp-dl-list > dt {
  display: list-item; 
  list-style-type: disc;
}

.mpdp-grid-column-1 {
  grid-column: 1
}

.mpdp-grid-column-1-span-2 {
  grid-column: 1 / span 2
}

.mpdp-hr {
  margin: 3px 0
}

.mpdp-overflow-wrap {
  overflow-wrap: anywhere;
}

.mpdp-link-bg {
  background-color: govuk-colour("blue");
}

.mpdp-text-link-color {
  color: govuk-colour("blue");
}

.mpdp-no-bullet {
  list-style-type: none !important;
}

.mpdp-tag-filter-cross {
  margin: -3px 3px;
  position: absolute;
}

.mpdp-tag-filter-item { 
  border: 1px solid black; 
  border-radius: 5px; 
  padding: 4px 10px;
  font-size: 17px;
}

.mpdp-position-relative {
  position: relative;
}

.mpdp-position-absolute {
  position: absolute;
}

.mpdp-float-left {
  float: left;
}

.mpdp-float-right {
  float: right;
}

.mpdp-display-inline {
  display: inline;
}

.mpdp-display-inline-block {
  display: inline-block;
}

.mpdp-display-grid {
  display: grid;
}

.mpdp-font-size-17 {
  font-size: 17px !important;
}

.mpdp-font-size-25 {
  font-size: 25px;
}

.mpdp-align-items-center {
  align-items: center;
}

.mpdp-right-0 {
  right: 0;
}

.mpdp-bottom-0 {
  bottom: 0;
}

.mpdp-display-none {
  display: none;
}

.mpdp-button {
  display: inline-block;
  font-size: 17px;
  margin: 5px;
  padding: 5px;
  cursor: pointer;
  border: 1px solid black; 
  border-radius: 5px; 
  box-shadow: none !important;
}

.mpdp-button:hover {
  border: 1px solid #4F5A5F;
  outline: 1px solid #4F5A5F;
}

.mpdp-button:focus, .mpdp-button:active {
  border: 3px solid #4F5A5F !important;
  outline: 3px solid #ffdd00;
  margin: 3px;
  background-color: #F1F0EF !important;
  top: 0 !important;
}
.form-inline #suggestions {
  position: absolute;
  background: white;
  border: 1px solid black;
  border-radius: 0 0 5px 5px;
  border-top: none;
  font-family: sans-serif;
  left: 0;
  right: 0;
  z-index: 1;
}

#suggestions div {
  padding: 10px 15px;
  cursor: pointer;
  white-space: normal;
  align-items: center;
}

input[type="search"]::-webkit-search-cancel-button {
  -webkit-appearance: none;
  display: inline-block;
  width: 12px;
  height: 12px;
  margin-left: 10px;
  background:
    linear-gradient(45deg, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 43%,#000 45%,#000 55%,rgba(0,0,0,0) 57%,rgba(0,0,0,0) 100%),
    linear-gradient(135deg, transparent 0%,transparent 43%,#000 45%,#000 55%,transparent 57%,transparent 100%);
}

.option-container {
  display: grid;
  grid-template-columns: auto 30px;
  z-index: 100;
}

.form-inline .option-container:hover, .active {
  background-color: govuk-colour("blue");
  color: govuk-colour('white');
}

.option-container::after {
  display: flex;
  font-size: 25px;
  align-items: center;
  content: "\2192";
  color: govuk-colour('white');
  margin-left: 8px;
}
.mpdp-justify-content-flex-end {
  display: flex;
  justify-content: flex-end
}

.download-csv-flex-end {
  display: flex;
}

@media (min-width: 641px) {
  .download-csv-flex-end {
    justify-content: flex-end;
  }
}

.detailsSummary {
  margin: 5px 15px 5px 15px;
  display: grid; 
  grid-template-columns: 1fr 25fr 1fr; 
  column-gap: 5px
}

.detailsSummary:hover :first-child {
  color: govuk-colour("dark-blue");
  cursor: pointer;
}

.detailsSummary::-webkit-details-marker {
  display: none
}

.detailsSummary:before {
  content: '';
  width: 0;
  height: 0;
  border-top: 7px solid transparent;
  border-left: 12px solid govuk-colour("blue");
  border-bottom: 7px solid transparent;
  margin-top: 7px;
}

@media screen and (max-width: 640px) {
  .detailsSummary:before {
    margin-top: 4px;
  }
}

details[open] .detailsSummary:before {
  content: '';
  width: 0;
  height: 0;
  border-left: 7px solid transparent;
  border-right: 7px solid transparent;
  border-top: 12px solid govuk-colour("blue");
  margin-top: 6px;
}

.detailsSummary:hover::before {
  border-left: 12px solid govuk-colour("dark-blue");
  cursor: pointer;
}

details[open] .detailsSummary:before {
  content: '';
  width: 0;
  height: 0;
  border-left: 7px solid transparent;
  border-right: 7px solid transparent;
  border-top: 12px solid govuk-colour("blue");
  margin-top: 6px;
}

details[open] .detailsSummary:hover::before {
  border-top: 12px solid govuk-colour("dark-blue");
  cursor: pointer;
}

.mpdp-details-text {
  border-left: 5px solid govuk-colour("mid-grey");
  margin-top: 0;
  margin-bottom: 10px;
  margin: 0 0 10px 15px;
  padding: 10px 5px;
}

.filterSummary {
  list-style: none;
}

.filterSummary:before {
  content: "";
  display: inline-block;
  border-right: 3px solid black;
  border-bottom: 3px solid black;
  width: 10px;
  height: 10px;
  transform: rotate(-45deg);
  margin-right: 10px;
}

.filterSummary::-webkit-details-marker {
  display: none
}

details[open] .filterSummary:before {
  transform: rotate(-315deg);
  position: relative;
  top: -3px;
}

